# incubator-quickstep

./: CMakeLists.txt  README.md
cli/: CommandExecutor.cpp  QuickstepCli.cpp
expressions/window_aggregation/: CMakeLists.txt  WindowAggregateFunction.cpp  WindowAggregateFunction.hpp  WindowAggregateFunction.proto  WindowAggregateFunctionAvg.cpp  WindowAggregateFunctionAvg.hpp  WindowAggregateFunctionFactory.cpp  WindowAggregateFunctionFactory.hpp  WindowAggregationHandle.hpp  WindowAggregationHandleAvg.cpp  WindowAggregationHandleAvg.hpp  WindowAggregationID.hpp
expressions/window_aggregation/tests/: WindowAggregationHandleAvg_unittest.cpp
query_execution/: CMakeLists.txt  PolicyEnforcer.hpp  PriorityPolicyEnforcer.cpp  PriorityPolicyEnforcer.hpp  QueryManagerDistributed.cpp  QueryManagerDistributed.hpp  Worker.cpp
query_optimizer/: CMakeLists.txt  ExecutionGenerator.cpp  ExecutionGenerator.hpp  ExecutionHeuristics.cpp  PhysicalGenerator.cpp
query_optimizer/cost_model/: SimpleCostModel.cpp  StarSchemaSimpleCostModel.cpp
query_optimizer/expressions/: WindowAggregateFunction.hpp
query_optimizer/resolver/: Resolver.cpp
query_optimizer/rules/: AttachBloomFilters.cpp  AttachBloomFilters.hpp  CMakeLists.txt  StarSchemaHashJoinOrderOptimization.cpp  StarSchemaHashJoinOrderOptimization.hpp
relational_operators/: HashJoinOperator.cpp  HashJoinOperator.hpp  WindowAggregationOperator.cpp  WindowAggregationOperator.hpp
storage/: CMakeLists.txt  HashTable.hpp  WindowAggregationOperationState.cpp  WindowAggregationOperationState.hpp  WindowAggregationOperationState.proto
utility/: BloomFilterAdapter.hpp  CMakeLists.txt  EventProfiler.hpp
